<resources>
    <string name="app_name">myPoli</string>
    <string name="title_edit_quest">Edit quest</string>
    <string name="today">Today</string>
    <string name="any_other_day">Any other day</string>
    <string name="start">Start</string>
    <string name="edit">Edit</string>
    <string name="quest_item_full_duration">%1$dh %2$dm</string>
    <string name="quest_item_minutes_duration">%d min</string>
    <string name="quest_item_hours_duration">%dh</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="upcoming">Upcoming</string>
    <string name="cancel">Cancel</string>
    <string name="suggest_idea">Suggest idea</string>
    <string name="contact_us">Contact Us</string>
    <string name="quest_moved_to_bucket_list">Moved to Bucket List</string>
    <string name="contact_us_email_chooser_title">Contact us</string>
    <string name="save">SAVE</string>
    <string name="share">Share</string>
    <string name="share_app">Share myPoli</string>
    <string name="widget_journey_name">Daily Journey</string>
    <string name="add">ADD</string>
    <string name="rate_dialog_initial_title">Hey Hero</string>
    <string name="rate_dialog_initial_message">Do you love myPoli?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_ok">OK</string>
    <string name="rate_dialog_never_ask_again">Never ask again</string>
    <string name="rate_dialog_rate_title">Me too!</string>
    <string name="rate_dialog_rate_message">It would be really helpful if you rate myPoli on Google Play</string>
    <string name="rate_dialog_feedback_title">Please, help me improve</string>
    <string name="rate_dialog_feedback_send">Send</string>
    <string name="rate_dialog_feedback_no">No, thanks</string>
    <string name="drawer_close">Navigation Closed</string>
    <string name="drawer_open">Navigation Opened</string>
    <string name="drawer_repeating_quests">Repeating Quests</string>
    <string name="drawer_challenges">Challenges</string>
    <string name="growth">Growth</string>
    <string name="sweet">SWEET</string>
    <string name="empty_repeating_quests_title">No Repeating Quests?</string>
    <string name="empty_repeating_quests_text">Schedule &amp; organize repeating tasks better with Repeating Quests. Start by creating your first one.</string>
    <string name="empty_challenges_title">Ready to achieve your goals?</string>
    <string name="empty_challenges_text">Organize projects &amp; achieve goals with Challenges. Create one, set a deadline and get it done!</string>
    <string name="empty_habits_title">Build Habits that stick!</string>
    <string name="empty_habits_text">Build good Habits or avoid bad ones. Create your first Habit now and start building your streak!</string>
    <string name="empty_shared_challenges_title">Complete your Challenges easier</string>
    <string name="empty_shared_challenges_text">Players who share their Challenges with friends are up to 5x more likely to complete them</string>
    <string name="end_of_time">End of time</string>
    <string name="quest_duration_question">How long will it take?</string>
    <string name="none">None</string>
    <string name="settings">Settings</string>
    <string name="accept">Accept</string>
    <string name="no_challenge_days">No days selected</string>
    <string name="do_not_know">Don\'t know</string>
    <string name="add_challenge_name_hint">Name (e.g. Run a 5k marathon)</string>
    <string name="add_challenge_motivation_hint">Motivation (e.g. Stay in shape)</string>
    <string name="title_edit_challenge">Edit Challenge</string>
    <string name="reminder_dialog_title">When should I remind you?</string>
    <string name="do_not_remind">Don\'t remind</string>
    <string name="snooze">Snooze</string>
    <string name="history">History</string>
    <string name="action_search">Search</string>
    <string name="unscheduled">Unscheduled</string>
    <string name="name_validation">Please, add name</string>
    <string name="calendar">Calendar</string>
    <string name="agenda">Agenda</string>
    <string name="pick_date">Pick date</string>
    <string name="ongoing_notification_no_quests_text">Smile, greatness awaits you!</string>
    <string name="ongoing_notification_no_quests_title">Time to add your first Quest</string>
    <string name="ongoing_notification_done_title">All done for today!</string>
    <string name="ongoing_notification_progress_text">Daily progress: %1$d/%2$d</string>
    <string name="rename_your_pet">Rename your pet</string>
    <string name="mark_done">MARK DONE</string>
    <string name="challenge_accepted">Challenge accepted!</string>
    <string name="widget_agenda_empty">myPoli wants a quest!</string>
    <string name="pet_store">Pets</string>
    <string name="something_went_wrong">Something went wrong, please try again later!</string>
    <string name="invite_title">Invite Your Friends</string>
    <string name="invite_message">Hey, look what I found. It is a really cool time management app!</string>
    <string name="invite_call_to_action">Download Now</string>
    <string name="completed">Completed</string>
    <string name="next">Next</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="add_to_challenge">Add to Challenge</string>
    <string name="note">Note</string>
    <string name="times_a_week">%d times a week</string>
    <string name="times_a_month">%d times a month</string>
    <string name="x_days">every %d days</string>
    <string name="once_a_week">Once a week</string>
    <string name="three_times_a_week">3 times a week</string>
    <string name="five_times_a_week">5 times a week</string>
    <string name="once_a_month">Once a month</string>
    <string name="once_a_year">Once a year</string>
    <string name="every_day">Every day</string>
    <string name="more_options">More options…</string>
    <string name="add_challenge_motivation1_hint">1st motivation</string>
    <string name="add_challenge_motivation2_hint">2nd motivation</string>
    <string name="add_challenge_motivation3_hint">3rd motivation</string>
    <string name="seven_days">7 days</string>
    <string name="ten_days">10 days</string>
    <string name="fourteen_days">14 days</string>
    <string name="thirty_days">30 days</string>
    <string name="end_of_week">End of the week</string>
    <string name="end_of_month">End of the month</string>
    <string name="end_of_year">End of the year</string>
    <string name="exact_date">Choose date…</string>
    <string name="sign_in_button">Sign in</string>
    <string name="continue_as_guest">Continue as Guest*</string>
    <string name="sign_in_benefits">Signing in allows you to back up all your data in the cloud so you can use your myPoli account on all your devices</string>
    <string name="sign_in_internet">myPoli needs internet to sign you in!</string>
    <string name="sign_in_loading_dialog_title">Letting you in</string>
    <string name="sign_in_loading_dialog_message">I hope that this will be quick and painless</string>
    <string name="sync_calendars_count">%d calendars selected</string>
    <string name="no_calendars_selected_to_sync">No calendars selected</string>
    <string name="settings_sync_calendars">Calendar sync</string>
    <string name="settings_select_sync_calendars">Calendars to sync</string>
    <string name="settings_sync_google_calendars">Sync Google calendars</string>
    <string name="settings_quick_do_notification">Show Quick Do notification</string>
    <string name="allow_read_calendars_perm_reason">myPoli needs to read your calendars to import your events as quests</string>
    <string name="settings_general_title">General</string>
    <string name="settings_agenda_title">Agenda</string>
    <string name="settings_about_title">About</string>
    <string name="settings_rate_title">Help myPoli</string>
    <string name="settings_rate_desc">Rate myPoli on Google Play and share your opinion</string>
    <string name="settings_app_version">App version</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="reminder_message">Message (e.g. Don\'t be lazy)</string>
    <string name="rate_dialog_feedback_hint">What do you think of myPoli …</string>
    <string name="day">Day</string>
    <string name="until">Until</string>
    <string name="percentage_done">%d%% done</string>
    <string name="category_learning">Learning</string>
    <string name="category_wellness">Wellness</string>
    <string name="category_personal">Personal</string>
    <string name="category_work">Work</string>
    <string name="category_fun">Fun</string>
    <string name="category_chores">Chores</string>
    <string name="notification_for_time">for %s</string>
    <string name="sub_quests">Sub Quests</string>
    <string name="notes">Notes</string>
    <string name="tap_to_add_note">Tap to add a note</string>
    <string name="tap_to_add_description">Tap to add a description</string>
    <string name="player_level">Level %1$d: %2$s</string>
    <string name="inbox_overdue_by">Overdue by %1$d %2$s</string>
    <string name="days">Days</string>
    <string name="reminder_at_start">Remind at start</string>
    <string name="reminder_time_format_full">Remind %1$d hours and %2$d minutes before</string>
    <string name="reminder_time_format_1_hour">Remind 1 hour before</string>
    <string name="reminder_time_format_hours">Remind %d hours before</string>
    <string name="reminder_time_format_1_minute">Remind 1 minute before</string>
    <string name="reminder_time_format_minutes">Remind %d minutes before</string>
    <string name="week">week</string>
    <string name="custom">Custom</string>
    <string-array name="time_before">
        <item>minutes before</item>
        <item>hours before</item>
        <item>weeks before</item>
        <item>days before</item>
    </string-array>
    <string name="duration_minutes_or_less">%d minutes or less</string>
    <string name="duration_format_full">%1$d h and %2$d min</string>
    <string name="duration_format_short">%1$dh %2$dm</string>
    <plurals name="duration_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="duration_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="quest_quantity">
        <item quantity="one">%d Quest</item>
        <item quantity="other">%d Quests</item>
    </plurals>
    <plurals name="event_quantity">
        <item quantity="one">%d Event</item>
        <item quantity="other">%d Events</item>
    </plurals>
    <string name="no_quests">No Quests</string>
    <string name="no_events">No Events</string>
    <string name="nothing_scheduled">Nothing scheduled</string>
    <string name="times_a_day">%d times a day</string>
    <string name="time_a_day">Once a day</string>
    <string name="yesterday">Yesterday</string>
    <string name="repeating_quest_next">Next: %s</string>
    <string name="for_time">for %s</string>
    <string name="drawer_store">Store</string>
    <string name="pet_seal">Modern Tail</string>
    <string name="achievements">Achievements</string>
    <string name="empty_achievements">You still haven\'t earned any Аchievements</string>
    <string name="avg_focus_hours_per_day">Avg. focus hours per day  (last 7 days)</string>
    <string name="daily_challenge_streak">Daily Challenge Streak</string>
    <string name="skip">Skip</string>
    <string name="onboard_existing_player">Returning Player?</string>
    <string name="gems_converted_this_month">Gems converted\nthis month</string>
    <string name="rewarded_habits_today">Habits done\ntoday</string>
    <string name="rewarded_quests_today">Quests done\ntoday</string>
</resources>