<?xml version="1.0" encoding="utf-8"?><!--<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:app="http://schemas.android.com/apk/res-auto"--><!--xmlns:tools="http://schemas.android.com/tools"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent">-->

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <android.support.constraint.Guideline
            android:id="@+id/middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />


        <ImageView
            android:id="@+id/dcIcon"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/profile_daily_challenge_streak"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/playerStat1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintBottom_toBottomOf="@id/dcIcon"
            app:layout_constraintStart_toEndOf="@id/dcIcon"
            app:layout_constraintTop_toTopOf="@id/dcIcon"
            tools:text="23" />

        <TextView
            android:id="@+id/playerStat1Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/daily_challenge_streak"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintBottom_toBottomOf="@id/dcIcon"
            app:layout_constraintEnd_toStartOf="@id/middle"
            app:layout_constraintStart_toEndOf="@id/playerStat1"
            app:layout_constraintTop_toTopOf="@id/dcIcon" />


        <ImageView
            android:id="@+id/focusTimeIcon"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:adjustViewBounds="true"
            android:src="@drawable/profile_avg_focus_hours"
            app:layout_constraintStart_toStartOf="@id/middle"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/playerStat2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintBottom_toBottomOf="@id/focusTimeIcon"
            app:layout_constraintStart_toEndOf="@id/focusTimeIcon"
            app:layout_constraintTop_toTopOf="@id/focusTimeIcon"
            tools:text="23" />

        <TextView
            android:id="@+id/playerStat2Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/avg_focus_hours_per_day"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintBottom_toBottomOf="@id/focusTimeIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/playerStat2"
            app:layout_constraintTop_toTopOf="@id/focusTimeIcon" />

        <TextView
            android:id="@+id/completedQuestsLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/rewarded_quests_today"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="?android:textColorSecondary"
            app:layout_constraintEnd_toStartOf="@+id/completedHabitsLabel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/completedQuests" />

        <TextView
            android:id="@+id/completedQuests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="?android:textColorPrimary"
            app:layout_constraintEnd_toEndOf="@+id/completedQuestsLabel"
            app:layout_constraintStart_toStartOf="@+id/completedQuestsLabel"
            app:layout_constraintTop_toBottomOf="@id/statsBarrier"
            tools:text="12" />

        <TextView
            android:id="@+id/completedHabitsLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/rewarded_habits_today"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="?android:textColorSecondary"
            app:layout_constraintEnd_toStartOf="@+id/convertedGemsLabel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/completedQuestsLabel"
            app:layout_constraintTop_toTopOf="@+id/completedQuestsLabel" />

        <TextView
            android:id="@+id/completedHabits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="?android:textColorPrimary"
            app:layout_constraintEnd_toEndOf="@+id/completedHabitsLabel"
            app:layout_constraintStart_toStartOf="@+id/completedHabitsLabel"
            app:layout_constraintTop_toTopOf="@+id/completedQuests"
            tools:text="12" />

        <TextView
            android:id="@+id/convertedGemsLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/gems_converted_this_month"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="?android:textColorSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/completedHabitsLabel"
            app:layout_constraintTop_toTopOf="@+id/completedQuestsLabel" />

        <TextView
            android:id="@+id/convertedGems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="?android:textColorPrimary"
            app:layout_constraintEnd_toEndOf="@+id/convertedGemsLabel"
            app:layout_constraintStart_toStartOf="@+id/convertedGemsLabel"
            app:layout_constraintTop_toTopOf="@+id/completedQuests"
            tools:text="12" />

        <android.support.constraint.Barrier
            android:id="@+id/membershipStatsBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="completedHabitsLabel, completedQuestsLabel, convertedGemsLabel" />

        <TextView
            android:id="@+id/achievementsTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/achievements"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/membershipStatsBarrier" />


        <TextView
            android:id="@+id/emptyAchievements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:padding="16dp"
            android:text="@string/empty_achievements"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/achievementsTitle" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/achievementList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/achievementsTitle" />

        <android.support.constraint.Barrier
            android:id="@+id/statsBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="playerStat1Title,focusTimeIcon,playerStat1,dcIcon,playerStat2,playerStat2Title" />

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>